added stylesheet.css and updated template header.htm

--- a/templates/header.htm
+++ b/templates/header.htm
@@ -1,5 +1,7 @@
 <html>
 	<head>
+		<link rel="stylesheet" type="text/css" href="stylesheet.css" />
 		<Title>Wallace Family</Title>
+		<h1>Welcome to the Wallace Family Page</h1>
 	</head>
 	<body>
