--- a/templates/index.htm
+++ b/templates/index.htm
@@ -1,2 +1,25 @@
-		<p>Welcome to the Wallace Home!</p>
-		<p>We are glad you are here!</p>
+		<table width="100%" border="0">
+			<tr>
+				<td colspan="2" bgcolor="#b5dcb3">
+				<h1>Welcome to The Wallace Family Home!</h1>
+				</td>
+			</tr>
+			<tr valign="top">
+				<td bgcolor="#aaa" width="50">
+					<b>Main Menu</b><br />
+						HTML<br />
+						PHP<br />
+						PERL...
+				</td>
+				<td bgcolor="#eee" width="100" height="200">
+					General Happenings!
+				</td>
+			</tr>
+			<tr>
+				<td colspan="2" bgcolor="#b5dcb3">
+					<center>
+					Copyright © 2017 Wallace Home
+					</center>
+				</td>
+			</tr>
+		</table>
