updated stylesheet and index.htm

--- a/templates/index.htm
+++ b/templates/index.htm
@@ -1,11 +1,11 @@
 		<table width="100%" border="0">
 			<tr>
-				<td colspan="2" bgcolor="#b5dcb3">
+				<td colspan="2" bgcolor="#3ffffb">
 				<h1>Welcome to The Wallace Family Home!</h1>
 				</td>
 			</tr>
 			<tr valign="top">
-				<td bgcolor="#aaa" width="50">
+				<td bgcolor="#aaa" width="25">
 					<b>Main Menu</b><br />
 						HTML<br />
 						PHP<br />
@@ -16,7 +16,7 @@
 				</td>
 			</tr>
 			<tr>
-				<td colspan="2" bgcolor="#b5dcb3">
+				<td colspan="2" bgcolor="#3ffffb">
 					<center>
 					Copyright © 2017 Wallace Home
 					</center>
