--- a/templates/index.htm
+++ b/templates/index.htm
@@ -1,22 +1,24 @@
 		<table width="100%" border="0">
 			<tr>
-				<td colspan="2" bgcolor="#3ffffb">
+				<td colspan="2" bgcolor="Turquoise">
 				<h1>Welcome to The Wallace Family Home!</h1>
 				</td>
 			</tr>
 			<tr valign="top">
-				<td bgcolor="#aaa" width="25">
-					<b>Main Menu</b><br />
-						HTML<br />
-						PHP<br />
-						PERL...
+				<td width="25">
+					<ul>
+						<li><a href="javascript:void(0)">Home</a></li>
+						<li><a href="javascript:void(0)">Kellie</a></li>
+						<li><a href="javascript:void(0)">Jed</a></li>
+						<li><a href="javascript:void(0)">Kids</a></li>
+					</ul>
 				</td>
-				<td bgcolor="#eee" width="100" height="200">
+				<td bgcolor="oldlace" width="100" height="200">
 					General Happenings!
 				</td>
 			</tr>
 			<tr>
-				<td colspan="2" bgcolor="#3ffffb">
+				<td colspan="2" bgcolor="Turquoise">
 					<center>
 					Copyright © 2017 Wallace Home
 					</center>
