--- a/templates/index.htm
+++ b/templates/index.htm
@@ -1,6 +1,6 @@
 		<table width="100%" border="0">
 			<tr>
-				<td colspan="2" bgcolor="Turquoise">
+				<td colspan="2">
 				<h1>Welcome to The Wallace Family Home!</h1>
 				</td>
 			</tr>
