--- a/templates/index.htm
+++ b/templates/index.htm
@@ -1,22 +1,19 @@
+		<div class="container" id="top">
+			<h1>Weclome to The Wallace Family Home!</h1>
+		</div>
+		
+		<nav>
+			<ul>
+				<li><a href="javascript:void(0)">Home</a></li>
+				<li><a href="javascript:void(0)">Kellie</a></li>
+				<li><a href="javascript:void(0)">Jed</a></li>
+				<li><a href="javascript:void(0)">Kids</a></li>
+			</ul>
+		</nav>
+		<section>
+			<p>General Happenings</p>
+		</section>
 		<table width="100%" border="0">
-			<tr>
-				<td colspan="2">
-				<h1>Welcome to The Wallace Family Home!</h1>
-				</td>
-			</tr>
-			<tr valign="top">
-				<td width="25">
-					<ul>
-						<li><a href="javascript:void(0)">Home</a></li>
-						<li><a href="javascript:void(0)">Kellie</a></li>
-						<li><a href="javascript:void(0)">Jed</a></li>
-						<li><a href="javascript:void(0)">Kids</a></li>
-					</ul>
-				</td>
-				<td bgcolor="oldlace" width="100" height="200">
-					General Happenings!
-				</td>
-			</tr>
 			<tr>
 				<td colspan="2" bgcolor="Turquoise">
 					<center>
