container didn't work right, reverted, added backgroud collor to section

--- a/templates/index.htm
+++ b/templates/index.htm
@@ -2,7 +2,7 @@
 			<h1>Weclome to The Wallace Family Home!</h1>
 		</div>
 		
-		<nav class="container">
+		<nav>
 			<ul>
 				<li><a href="javascript:void(0)">Home</a></li>
 				<li><a href="javascript:void(0)">Kellie</a></li>
@@ -10,7 +10,7 @@
 				<li><a href="javascript:void(0)">Kids</a></li>
 			</ul>
 		</nav>
-		<section class="container">
+		<section>
 			<p>General Happenings</p>
 		</section>
 		<table width="100%" border="0">
