--- a/templates/index.htm
+++ b/templates/index.htm
@@ -1,18 +1,21 @@
-		<div class="container" id="top">
-			<h1>Weclome to The Wallace Family Home!</h1>
+		<div class=container>
+			<div class="container" id="top">
+				<h1>Weclome to The Wallace Family Home!</h1>
+			</div>
+		
+			<nav>
+				<ul>
+					<li><a href="javascript:void(0)">Home</a></li>
+					<li><a href="javascript:void(0)">Kellie</a></li>
+					<li><a href="javascript:void(0)">Jed</a></li>
+					<li><a href="javascript:void(0)">Kids</a></li>
+				</ul>
+			</nav>
+			<section>
+				<p>General Happenings</p>
+			</section>
 		</div>
 		
-		<nav>
-			<ul>
-				<li><a href="javascript:void(0)">Home</a></li>
-				<li><a href="javascript:void(0)">Kellie</a></li>
-				<li><a href="javascript:void(0)">Jed</a></li>
-				<li><a href="javascript:void(0)">Kids</a></li>
-			</ul>
-		</nav>
-		<section>
-			<p>General Happenings</p>
-		</section>
 		<table width="100%" border="0">
 			<tr>
 				<td colspan="2" bgcolor="Turquoise">
