--- a/templates/header.htm
+++ b/templates/header.htm
@@ -1,6 +1,7 @@
 <html>
 	<head>
-		<link rel="stylesheet" type="text/css" href="stylesheet.css" />
+		<link rel="stylesheet" type="text/css" href="layout.css" />
+		<link rel="stylesheet" type="text/css" href="color.css" />
 		<Title>Wallace Family</Title>
 	</head>
 	<body>
