--- a/templates/index.htm
+++ b/templates/index.htm
@@ -1,27 +1,20 @@
-		<div class=container>
-			<div class="container" id="top">
+		<div id="page">
+			<div  id="header">
 				<h1>Weclome to The Wallace Family Home!</h1>
 			</div>
 		
-			<nav>
+			<div id="nav-vert">
 				<ul>
 					<li><a href="javascript:void(0)">Home</a></li>
 					<li><a href="javascript:void(0)">Kellie</a></li>
 					<li><a href="javascript:void(0)">Jed</a></li>
 					<li><a href="javascript:void(0)">Kids</a></li>
 				</ul>
-			</nav>
-			<section>
+			</div>
+			<div id="col-alpha">
 				<p>General Happenings</p>
-			</section>
+			</div>
+			<div id="footer">
+				<p>Copyright © 2017 Wallace Home<p>
+			</div>
 		</div>
-		
-		<table width="100%" border="0">
-			<tr>
-				<td colspan="2" bgcolor="Turquoise">
-					<center>
-					Copyright © 2017 Wallace Home
-					</center>
-				</td>
-			</tr>
-		</table>
