added a family photo

--- a/templates/index.htm
+++ b/templates/index.htm
@@ -13,6 +13,7 @@
 			</div>
 			<div id="col-alpha">
 				<p>General Happenings</p>
+				<img src="graphics/Family Photo Lion.jpg" alt="Family Photo">
 			</div>
 			<div id="footer">
 				<p>Copyright © 2017 Wallace Home<p>
