--- a/templates/index.htm
+++ b/templates/index.htm
@@ -1,9 +1,9 @@
-		<div id="page">
-			<div  id="header">
+		<div class="page">
+			<div  class="header">
 				<h1>Weclome to The Wallace Family Home!</h1>
 			</div>
 		
-			<div id="nav-vert">
+			<div class="nav-vert">
 				<ul>
 					<li><a href="javascript:void(0)">Home</a></li>
 					<li><a href="javascript:void(0)">Kellie</a></li>
@@ -11,11 +11,11 @@
 					<li><a href="javascript:void(0)">Kids</a></li>
 				</ul>
 			</div>
-			<div id="col-alpha">
+			<div class="col-alpha">
 				<p>General Happenings</p>
 				<img src="graphics/Family Photo Lion.jpg" alt="Family Photo">
 			</div>
-			<div id="footer">
+			<div class="footer">
 				<p>Copyright © 2017 Wallace Home<p>
 			</div>
 		</div>
