--- a/layout.css
+++ b/layout.css
@@ -1,56 +1,53 @@
 /* Resets and overrides */
 
-* {
-	margin: 0;
-	padding:0;
+*{
+	box-sizing:border-box;
+	margin:0px;
+	border;0px;
 }
-
-* {
-  -webkit-box-sizing: border-box;
-     -moz-box-sizing: border-box;
-          box-sizing: border-box;
-}
-
 
 /*Layout*/
-html{
-	max-width:1900px;
+
+body, html {
+	width: 100%;
+	width: 100vw;
+	padding: 0;
+	margin: 0;
 }
-#page{
-	position: relative;
-	clear:both;
-	margin: 10px;
+
+img {
+	max-width: 100%;
+	max-height: 100%;
+}
+
+.flex-row{
+	display:flex;
+	flex-wrap:nowrap;
+	text-align:center;
+	justify-content:center;
 	
 }
 
-#header{
-	position: relative;
-	clear: both;
+.flex-column{
+	display:flex;
+	flex-direction:column;
 }
+
+.placemark{
+	background-color:DodgerBlue;
+	margin: 5px;
+	padding: 5px;
+	text-align: left;
+	
+}
+
 #header h1{
 	text-align: center;
 }
 
-#nav-vert{
-	position: relative;
-	width: 200px;
-	float: left
-}
 
-#nav-hort{
-	
-	
-}
 
-#col-alpha{
-	position: relative;
-	float: left;
-}
 
-#footer{
-	position: relative;
-	clear:both;
-}
 
 #footer p{
 	text-align: center;
