--- a/templates/index.htm
+++ b/templates/index.htm
@@ -1,21 +1,42 @@
-		<div id="page">
-			<div  id="header">
-				<h1>Weclome to The Wallace Family Home!</h1>
+<script>	
+	function loadDoc($path) {
+		var xhttp = new XMLHttpRequest();
+		xhttp.onreadystatechange = function() {
+			if (this.readyState == 4 && this.status == 200) {
+				document.getElementById("content").innerHTML =
+				this.responseText;
+			};
+		};
+	xhttp.open("GET", $path, true);
+	xhttp.send();
+	};
+</script>
+
+
+<div class="flex-row" id="header">
+			<div >
+				<h1>Welcome to The Wallace Family Home!</h1>
 			</div>
+		</div>
 		
-			<div id="nav-vert">
-				<ul>
-					<li><a href="javascript:void(0)">Home</a></li>
-					<li><a href="javascript:void(0)">Kellie</a></li>
-					<li><a href="javascript:void(0)">Jed</a></li>
-					<li><a href="javascript:void(0)">Kids</a></li>
-				</ul>
+		<div class="flex-row" style="justify-content: flex-start">
+			<div class="flex-column" id="nav-vert">
+				<div>
+					<ul>
+						<li><a href="javascript:void(0)" onclick="loadDoc('/Pages/home.htm')">Home</a></li>
+						<li><a href="javascript:void(0)">Kellie</a></li>
+						<li><a href="javascript:void(0)" onclick="loadDoc('/Pages/atlascon.htm')">Jed</a></li>
+						<li><a href="javascript:void(0)">Kids</a></li>
+					</ul>
+				</div>
 			</div>
-			<div id="col-alpha">
-				<p>General Happenings</p>
-				<img src="graphics/Family Photo Lion.jpg" alt="Family Photo">
+			<div class="flex-column" id="content">
+				
 			</div>
-			<div id="footer">
+		</div>
+		
+		<div class="flex-row" id="footer">
+			<div>
 				<p>Copyright © 2017 Wallace Home<p>
 			</div>
 		</div>
