--- a/CSS/color.css
+++ b/CSS/color.css
@@ -3,18 +3,18 @@
 	
 }
 
-.header{
+#header{
 	background-color:darkturquoise;
 }
-.header h1{
+#header h1{
 	
 }
 
-.nav-vert{
+#nav-vert{
 	background-color:darkturquoise;
 }
 
-.footer{
+#footer{
 	background-color:darkturquoise;
 }
 
@@ -28,7 +28,7 @@
 	}
 
 	li a {
-		color: #000;
+		
 		
 	}
 
