--- a/templates/index.htm
+++ b/templates/index.htm
@@ -25,7 +25,7 @@
 					<ul>
 						<li><a href="javascript:void(0)" onclick="loadDoc('/Pages/home.htm')">Home</a></li>
 						<li><a href="javascript:void(0)">Kellie</a></li>
-						<li><a href="javascript:void(0)" onclick="loadDoc('/Pages/atlascon.htm')">Jed</a></li>
+						<li><a href="javascript:void(0)" onclick="loadDoc('/Pages/Jedlan.php')">Jed</a></li>
 						<li><a href="javascript:void(0)">Kids</a></li>
 					</ul>
 				</div>
