--- a/templates/index.htm
+++ b/templates/index.htm
@@ -1,17 +1,3 @@
-<script>	
-	function loadDoc($path) {
-		var xhttp = new XMLHttpRequest();
-		xhttp.onreadystatechange = function() {
-			if (this.readyState == 4 && this.status == 200) {
-				document.getElementById("content").innerHTML =
-				this.responseText;
-			};
-		};
-	xhttp.open("GET", $path, true);
-	xhttp.send();
-	};
-</script>
-
 
 <div class="flex-row" id="header">
 			<div >
@@ -23,9 +9,9 @@
 			<div class="flex-column" id="nav-vert">
 				<div>
 					<ul>
-						<li><a href="javascript:void(0)" onclick="loadDoc('/Pages/home.htm')">Home</a></li>
+						<li><a href="javascript:void(0)" onclick="loadDoc('content','/Pages/home.htm')">Home</a></li>
 						<li><a href="javascript:void(0)">Kellie</a></li>
-						<li><a href="javascript:void(0)" onclick="loadDoc('/Pages/Jedlan.php')">Jed</a></li>
+						<li><a href="javascript:void(0)" onclick="loadDoc('content','/Pages/Jedlan.php')">Jed</a></li>
 						<li><a href="javascript:void(0)">Kids</a></li>
 					</ul>
 				</div>
