Finially confurmed that the page finished loading, now i just need to get the getElement bit to work....

--- a/templates/header.htm
+++ b/templates/header.htm
@@ -6,5 +6,12 @@
 		<Title>Wallace Family</Title>
 	</head>
 	
-	<body>
-	
+	<body onload="initElement()">
+	<script>
+
+//this should only get called when the body is done loading.....
+function initElement() {
+	var mainheader = document.getElementById("mainHeader");
+	mainheader.innerHTML = mainheader.innerHTML + "<p>Finsished Loading</p>";
+}
+</script>
