--- a/templates/index.htm
+++ b/templates/index.htm
@@ -1,6 +1,6 @@
 
 <div class="flex-row" id="header">
-			<div >
+			<div id="mainheader">
 				<h1>Welcome to The Wallace Family Home!</h1>
 			</div>
 		</div>
