--- a/templates/index.htm
+++ b/templates/index.htm
@@ -13,6 +13,7 @@
 						<li><a href="javascript:void(0)">Kellie</a></li>
 						<li><a href="javascript:void(0)" onclick="loadDoc('content','/Pages/atlascon.htm')">Jed</a></li>
 						<li><a href="javascript:void(0)">Kids</a></li>
+						<li><a href="javascript:void(0)" onclick="loadDoc('content','/Pages/calendarshow.php')">Calendar</a></li>
 					</ul>
 				</div>
 			</div>
