Changed coloring and layout for atlas

--- a/Pages/atlaspages/CSS/color.css
+++ b/Pages/atlaspages/CSS/color.css
@@ -4,18 +4,18 @@
 }
 
 #header{
-	background-color:darkturquoise;
+	background-color:DodgerBlue;
 }
 #header h1{
 	
 }
 
 #nav-vert{
-	background-color:darkturquoise;
+	background-color:DodgerBlue;
 }
 
 #footer{
-	background-color:darkturquoise;
+	background-color:DodgerBlue;
 }
 
 
