--- a/Pages/atlaspages/HTML/templates/index.htm
+++ b/Pages/atlaspages/HTML/templates/index.htm
@@ -1,7 +1,7 @@
 
 <div class="flex-row" id="header">
 			<div id="mainheader">
-				<h1>Welcome to The Wallace Family Home!</h1>
+				<h1>ATLAS INTEGRATED SECURITY CRM</h1>
 			</div>
 		</div>
 		
@@ -13,7 +13,6 @@
 						<li><a href="javascript:void(0)">Kellie</a></li>
 						<li><a href="javascript:void(0)" onclick="loadDoc('content','/Pages/atlascon.htm')">Jed</a></li>
 						<li><a href="javascript:void(0)">Kids</a></li>
-						<li><a href="javascript:void(0)" onclick="loadDoc('content','/Pages/calendarshow.php')">Calendar</a></li>
 					</ul>
 				</div>
 			</div>
@@ -24,6 +23,6 @@
 		
 		<div class="flex-row" id="footer">
 			<div>
-				<p>Copyright © 2017 Wallace Home<p>
+				<p>Copyright © 2017 AIS<p>
 			</div>
 		</div>
