--- a/Pages/atlaspages/HTML/templates/header.htm
+++ b/Pages/atlaspages/HTML/templates/header.htm
@@ -3,7 +3,7 @@
 	<head>
 		<link rel="stylesheet" type="text/css" href="CSS/layout.css" />
 		<link rel="stylesheet" type="text/css" href="CSS/color.css" />
-		<Title>Wallace Family</Title>
+		<Title>Atlas CRM</Title>
 	</head>
 	
 	<body>
