--- a/templates/index.htm
+++ b/templates/index.htm
@@ -11,7 +11,7 @@
 					<ul>
 						<li><a href="javascript:void(0)" onclick="loadDoc('content','/Pages/home.htm')">Home</a></li>
 						<li><a href="javascript:void(0)">Kellie</a></li>
-						<li><a href="javascript:void(0)" onclick="loadDoc('content','/Pages/atlascon.htm')">Jed</a></li>
+						<li><a href="javascript:void(0)" onclick=window.location.href="Pages/atlaspages/index.php">Atlas</a></li>
 						<li><a href="javascript:void(0)">Kids</a></li>
 						<li><a href="javascript:void(0)" onclick="loadDoc('content','/Pages/calendarshow.php')">Calendar</a></li>
 					</ul>
