--- a/Pages/atlaspages/HTML/templates/header.htm
+++ b/Pages/atlaspages/HTML/templates/header.htm
@@ -1,8 +1,7 @@
 <html>
 
 	<head>
-		<link rel="stylesheet" type="text/css" href="CSS/layout.css" />
-		<link rel="stylesheet" type="text/css" href="CSS/color.css" />
+		<link rel="stylesheet" type="text/css" href="CSS/style.css" />
 		<Title>Atlas CRM</Title>
 	</head>
 	
