Moved header HTML to header.htm and footer html to footer.htm

--- a/Pages/atlaspages/HTML/templates/header.htm
+++ b/Pages/atlaspages/HTML/templates/header.htm
@@ -6,3 +6,8 @@
 	</head>
 	
 	<body>
+	<div class="flex-row" id="header">
+		<div id="mainheader">
+			<h1>ATLAS INTEGRATED SECURITY CRM</h1>
+		</div>
+	</div>
