Added start and ends for HTML markup files for toubleshooting

--- a/Pages/atlaspages/HTML/templates/header.htm
+++ b/Pages/atlaspages/HTML/templates/header.htm
@@ -1,3 +1,4 @@
+<!--Start of Header.htm -->
 <html>
 
 	<head>
@@ -12,3 +13,5 @@
 		</div>
 	</div>
 	<div class="flex-row" style="justify-content: flex-start">
+	
+<!--End of Header.htm-->
