--- a/Pages/atlaspages/HTML/templates/mainmenu.htm
+++ b/Pages/atlaspages/HTML/templates/mainmenu.htm
@@ -1,3 +1,4 @@
+<!--Start of mainmenu.htm-->
 <div class="flex-column" id="nav-vert">
 	<ul>
 		<li><a href="javascript:void(0)" onclick="loadDoc('content','/Pages/home.htm')">Home</a></li>
@@ -6,3 +7,4 @@
 		<li><a href="javascript:void(0)">Kids</a></li>
 	</ul>
 </div>
+<!-- End of mainmenu.htm-->
