--- a/Pages/atlaspages/CSS/style.css
+++ b/Pages/atlaspages/CSS/style.css
@@ -21,12 +21,8 @@ img {
 }
 
 
-ul {
-	list-style-type: none;
-	position:relative;
-}
 
-li a {
+a {
 	display: block;
 	padding: 8px 16px;
 	text-decoration: none;
@@ -35,7 +31,7 @@ li a {
 }
 
 	
-li a:hover {
+a:hover {
 	background-color: black;
 	border-left: 6px solid silver;
 	color: silver;
