--- a/Pages/atlaspages/HTML/templates/header.htm
+++ b/Pages/atlaspages/HTML/templates/header.htm
@@ -12,6 +12,6 @@
 			<h1>ATLAS INTEGRATED SECURITY CRM</h1>
 		</div>
 	</div>
-	<div class="flex-row" style="justify-content: flex-start">
+	<div class="flex-row" id="indexpage" style="justify-content: flex-start">
 	
 <!--End of Header.htm-->
