So started work on the total distance after finishing up time and desplay, and now time is all fucked...something is wrong with my if statment.....

--- a/Pages/atlaspages/HTML/templates/index.htm
+++ b/Pages/atlaspages/HTML/templates/index.htm
@@ -3,7 +3,7 @@
 		
 		
 			
-			<div class="flex-column" id="content">
+			<div class="flex-row" id="content">
 				<?php loadkml() ?>
 			</div>
 		
