--- a/templates/index.htm
+++ b/templates/index.htm
@@ -12,7 +12,7 @@
 						<li><a href="javascript:void(0)" onclick="loadDoc('content','/Pages/home.htm')">Home</a></li>
 						<li><a href="javascript:void(0)">Kellie</a></li>
 						<li><a href="javascript:void(0)" onclick=window.location.href="Pages/atlaspages/index.php">Atlas</a></li>
-						<li><a href="javascript:void(0)">Kids</a></li>
+						<li><a href="javascript:void(0)" onclick=window.location.href="Pages/MVC/MVC.php">MVC</a></li>
 						<li><a href="javascript:void(0)" onclick="loadDoc('content','/Pages/calendarshow.php')">Calendar</a></li>
 					</ul>
 				</div>
