Moved CSS and graphics

--- a/templates/index.htm
+++ b/templates/index.htm
@@ -11,8 +11,8 @@
 					<ul>
 						<li><a href="javascript:void(0)" onclick="loadDoc('content','/Pages/home.htm')">Home</a></li>
 						<li><a href="javascript:void(0)">Kellie</a></li>
-						<li><a href="javascript:void(0)" onclick=window.location.href="Pages/atlaspages/index.php">Atlas</a></li>
-						<li><a href="javascript:void(0)" onclick=window.location.href="Pages/MVC/MVC.php">MVC</a></li>
+						<li><a href="javascript:void(0)">N/A</a></li>
+						<li><a href="javascript:void(0)">N/A</a></li>
 					</ul>
 				</div>
 			</div>
